IPRT: Renamed RTCmdLs to RTFsCmdLs and moved it into the runtime, leaving a main wrapper behind.  Want to use it in VBoxControl for debugging purposes.
svn:sync-xref-src-repo-rev: r120022

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70396 2018-01-01 12:27:08Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70417 2018-01-02 11:14:44Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -433,6 +433,7 @@ RuntimeR3_SOURCES       = \
 	common/fs/isomakercmd.cpp \
 	common/fs/isomakerimport.cpp \
 	common/fs/ntfsvfs.cpp \
+	common/fs/RTFsCmdLs.cpp \
 	common/ldr/ldr.cpp \
 	common/ldr/ldrELF.cpp \
 	common/ldr/ldrEx.cpp \
