IPRT: Moved RTZipGZipCmd into the runtime, leaving a main wrapper behind.  Want to use it too in VBoxControl for debugging purposes.
svn:sync-xref-src-repo-rev: r120028

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70417 2018-01-02 11:14:44Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70423 2018-01-02 11:51:48Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -632,12 +632,13 @@ RuntimeR3_SOURCES       = \
 	common/vfs/vfsstdpipe.cpp \
 	common/zip/tar.cpp \
 	common/zip/tarcmd.cpp \
-	common/zip/unzipcmd.cpp \
 	common/zip/tarvfs.cpp \
 	common/zip/tarvfswriter.cpp \
 	common/zip/gzipvfs.cpp \
+	common/zip/gzipcmd.cpp \
 	common/zip/pkzip.cpp \
 	common/zip/pkzipvfs.cpp \
+	common/zip/unzipcmd.cpp \
 	common/zip/zip.cpp \
 	generic/createtemp-generic.cpp \
 	generic/critsect-generic.cpp \
