--- a/src/VBox/Additions/common/VBoxControl/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxControl/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70344 2017-12-26 14:43:35Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70431 2018-01-02 15:14:30Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the Guest Additions Command Line Management Interface.
 #
@@ -42,6 +42,7 @@ VBoxControl_DEFS     += \
 	$(if $(VBOX_WITH_SHARED_FOLDERS),VBOX_WITH_SHARED_FOLDERS,)
 VBoxControl_DEFS.win += \
 	$(if $(VBOX_WITH_DPC_LATENCY_CHECKER),VBOX_WITH_DPC_LATENCY_CHECKER,)
+VBoxControl_SDKS = VBOX_ZLIB_STATIC
 VBoxControl_SOURCES = \
 	VBoxControl.cpp
 VBoxControl_SOURCES.win = \
