ValidationKit: Adding valkit.txt to the iso as a file to check for when waiting on the ISO to be laoded. vboxtxs-readme.txt have a different name in plain ISO-9660.
svn:sync-xref-src-repo-rev: r120122

--- a/src/VBox/ValidationKit/Makefile.kmk
+++ b/src/VBox/ValidationKit/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70501 2018-01-10 10:26:21Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit.
 #
@@ -146,6 +146,7 @@ include $(FILE_KBUILD_SUB_FOOTER)
 # Construct the file spec for creating the Validation Kit guest iso.
 #
 VBOX_VALIDATIONKIT_FILESPEC = \
+	$(VBOX_PATH_VALIDATIONKIT)/docs/valkit.txt \
 	$(VBOX_PATH_VALIDATIONKIT)/vboxtxs-readme.txt
 ifneq ($(KBUILD_HOST),os2)
  VBOX_VALIDATIONKIT_FILESPEC += \
