--- a/src/VBox/ValidationKit/utils/TestExecServ/Makefile.kmk
+++ b/src/VBox/ValidationKit/utils/TestExecServ/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70509 2018-01-10 11:23:52Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70511 2018-01-10 11:26:42Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - The Basic Remote Execution Service.
 #
@@ -36,7 +36,7 @@ TestExecService_DEFS = \
 TestExecService_SOURCES = \
 	TestExecService.cpp \
 	TestExecServiceTcp.cpp
-TestExecService_VBOX_IMPORT_CHECKER.win.x86   = nt31 $(warning fix VBOX_IMPORT_CHECKER.win.x86 template bugbug!)
+TestExecService_VBOX_IMPORT_CHECKER.win.x86   = nt31
 
 INSTALLS += TestExecServiceFiles
 TestExecServiceFiles_TEMPLATE                = VBoxValidationKitR3
@@ -64,9 +64,4 @@ TestExecServiceFiles_EXEC_SOURCES.win     := \
 
 
 include $(FILE_KBUILD_SUB_FOOTER)
-
-#%fffffe800000600c 0f 20 dc                mov esp, cr3
-#%fffffe800000600f 0f 1f 44 00 00          db 00fh, 01fh,044h,090h,090h
-#%fffffe8000006014 48 81 e4 ff e7 ff ff    and rsp, 0ffffffffffffe7ffh
-#%fffffe800000601b 0f 22 dc                mov cr3, esp
 
