--- a/src/VBox/ValidationKit/utils/nt/Makefile.kmk
+++ b/src/VBox/ValidationKit/utils/nt/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70515 2018-01-10 11:55:05Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - Windows NT Specific Utilities.
 #
@@ -33,6 +33,7 @@ include $(KBUILD_PATH)/subheader.kmk
 PROGRAMS.win += ntSetFreq
 ntSetFreq_TEMPLATE = VBoxValidationKitR3
 ntSetFreq_SOURCES  = ntsetfreq.cpp
+ntSetFreq_VBOX_IMPORT_CHECKER.win.x86 = nt350
 
 #
 # Test coherency among NT time sources.
