Audio/VRDE: Implemented audio driver base class for Main audio drivers for dynamically attaching / detaching on runtime.
svn:sync-xref-src-repo-rev: r120203

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70496 2018-01-09 16:09:23Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 70533 2018-01-11 13:28:49Z andreas.loeffler@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -911,6 +911,7 @@ VBoxC_SOURCES += \
 VBoxC_SOURCES += \
 	../Devices/Audio/AudioMixBuffer.cpp \
 	../Devices/Audio/DrvAudioCommon.cpp \
+	src-client/AudioDriver.cpp \
 	$(if $(VBOX_WITH_AUDIO_VRDE),src-client/DrvAudioVRDE.cpp,) \
 	$(if $(VBOX_WITH_AUDIO_VIDEOREC),src-client/DrvAudioVideoRec.cpp,)
 
