--- a/src/VBox/ValidationKit/Makefile.kmk
+++ b/src/VBox/ValidationKit/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70503 2018-01-10 10:50:52Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70541 2018-01-11 14:53:57Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit.
 #
@@ -146,7 +146,7 @@ include $(FILE_KBUILD_SUB_FOOTER)
 # Construct the file spec for creating the Validation Kit guest iso.
 #
 VBOX_VALIDATIONKIT_FILESPEC = \
-	$(VBOX_PATH_VALIDATIONKIT_SRC)/docs/valkit.txt \
+	valkit.txt=$(VBOX_PATH_VALIDATIONKIT_SRC)/docs/valkit.txt \
 	$(VBOX_PATH_VALIDATIONKIT)/vboxtxs-readme.txt
 ifneq ($(KBUILD_HOST),os2)
  VBOX_VALIDATIONKIT_FILESPEC += \
