Add more error checking when doing debug (test) builds of Linux kernel modules. bugref:4567: Linux kernel driver maintenance Back-port candidate to 5.2 if the build boxes agree.
svn:sync-xref-src-repo-rev: r120418

--- a/src/VBox/Installer/linux/Makefile.include.footer
+++ b/src/VBox/Installer/linux/Makefile.include.footer
@@ -1,4 +1,4 @@
-# $Id: Makefile.include.footer 69567 2017-11-03 14:47:27Z noreply@oracle.com $
+# $Id: Makefile.include.footer 70682 2018-01-22 17:32:24Z noreply@oracle.com $
 ## @file
 # VirtualBox Guest Additions kernel module Makefile, common parts.
 #
@@ -37,7 +37,7 @@ ifndef INCL
 endif
 KFLAGS   := -D__KERNEL__ -DMODULE $(MOD_DEFS)
 ifeq ($(BUILD_TYPE),debug)
- KFLAGS  += -DDEBUG -DDEBUG_$(subst $(subst _, ,_),_,$(USERNAME)) -DDEBUG_USERNAME=$(subst $(subst _, ,_),_,$(USERNAME))
+ KFLAGS  += -DDEBUG -DDEBUG_$(subst $(subst _, ,_),_,$(USERNAME)) -DDEBUG_USERNAME=$(subst $(subst _, ,_),_,$(USERNAME)) -Werror -Wall
 endif
 
 ifeq ($(KERN_VERSION), 24)
