--- a/src/VBox/ValidationKit/tests/smoketests/Makefile.kmk
+++ b/src/VBox/ValidationKit/tests/smoketests/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70695 2018-01-22 23:17:53Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - Smoke Tests.
 #
@@ -32,7 +32,8 @@ INSTALLS += ValidationKitTestsSmokeTests
 ValidationKitTestsSmokeTests_TEMPLATE = VBoxValidationKitR3
 ValidationKitTestsSmokeTests_INST = $(INST_VALIDATIONKIT)tests/smoketests/
 ValidationKitTestsSmokeTests_EXEC_SOURCES := \
-	$(PATH_SUB_CURRENT)/tdSmokeTest1.py
+	$(PATH_SUB_CURRENT)/tdSmokeTest1.py \
+	$(PATH_SUB_CURRENT)/tdExoticOrAncient1.py
 
 VBOX_VALIDATIONKIT_PYTHON_SOURCES += $(ValidationKitTestsSmokeTests_EXEC_SOURCES)
 
