FE/Qt bugref:9072 Logviewer MacOS fix part-2. Remove Cocoa native widgets.
svn:sync-xref-src-repo-rev: r120449

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70581 2018-01-14 20:54:55Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 70706 2018-01-23 13:24:34Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -550,6 +550,7 @@ VirtualBox_QT_MOCSRCS = \
 	src/globals/UIMainEventListener.cpp \
 	src/globals/UIThreadPool.cpp \
 	src/logviewer/UIVMLogViewerFilterPanel.cpp \
+	src/logviewer/UIVMLogViewerSearchPanel.cpp \
 	src/logviewer/UIVMLogViewerTextEdit.cpp \
 	src/medium/UIMediumEnumerator.cpp \
 	src/runtime/UIActionPoolRuntime.cpp \
