--- a/src/VBox/ValidationKit/tests/Makefile.kmk
+++ b/src/VBox/ValidationKit/tests/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70763 2018-01-28 20:23:10Z alexander.eichner@oracle.com $
 ## @file
 # VirtualBox Validation Kit.
 #
@@ -43,6 +43,7 @@ include $(PATH_SUB_CURRENT)/teleportation/Makefile.kmk
 include $(PATH_SUB_CURRENT)/unittests/Makefile.kmk
 include $(PATH_SUB_CURRENT)/installation/Makefile.kmk
 include $(PATH_SUB_CURRENT)/usb/Makefile.kmk
+include $(PATH_SUB_CURRENT)/serial/Makefile.kmk
 
 $(evalcall def_vbox_validationkit_process_python_sources)
 include $(FILE_KBUILD_SUB_FOOTER)
