ValidationKit/serial/tdSerial1: Add loopback module for TCP/named pipe modes to relay sent data back to the guest. Named pipe support for Windows is missing
svn:sync-xref-src-repo-rev: r120583

--- a/src/VBox/ValidationKit/tests/serial/Makefile.kmk
+++ b/src/VBox/ValidationKit/tests/serial/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70769 2018-01-28 21:02:33Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 70796 2018-01-29 18:01:27Z alexander.eichner@oracle.com $
 ## @file
 # VirtualBox Validation Kit - Serial port.
 #
@@ -32,7 +32,8 @@ INSTALLS += ValidationKitTestsSerial
 ValidationKitTestsSerial_TEMPLATE = VBoxValidationKitR3
 ValidationKitTestsSerial_INST = $(INST_VALIDATIONKIT)tests/serial/
 ValidationKitTestsSerial_EXEC_SOURCES := \
-	$(PATH_SUB_CURRENT)/tdSerial1.py
+	$(PATH_SUB_CURRENT)/tdSerial1.py \
+	$(PATH_SUB_CURRENT)/loopback.py
 
 VBOX_VALIDATIONKIT_PYTHON_SOURCES += $(ValidationKitTestsSerial_EXEC_SOURCES)
 
