Makefiles/GAs/Win: Made the WDDM related DLLs Windows Vista+ and the other 3D DLLs W2K+. bugref:9107
svn:sync-xref-src-repo-rev: r120589

--- a/src/VBox/Additions/WINNT/Graphics/Video/disp/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Video/disp/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70332 2017-12-22 19:28:49Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70802 2018-01-30 04:53:42Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the Windows guest display driver.
 #
@@ -88,7 +88,7 @@ ifdef VBOX_WITH_WDDM
 # VBoxDispD3D - Windows Guest Additions WDDM R3 Display Driver
 #
 DLLS += VBoxDispD3D
-VBoxDispD3D_TEMPLATE = VBoxGuestR3Dll
+VBoxDispD3D_TEMPLATE = VBoxGuestR3DllMinVista
 VBoxDispD3D_SDKS     = ReorderCompilerIncs $(VBOX_WINDDK_GST_WLH)
 VBoxDispD3D_DEFS     = UNICODE _UNICODE VBOX_WITH_WDDM VBOXWDDMDISP LOG_TO_BACKDOOR LOG_TO_BACKDOOR_DRV VBOX_WITH_HGCM D3D_UMD_INTERFACE_VERSION=0x000C
 ifdef DEBUG_misha
