--- a/src/libs/Makefile.kmk
+++ b/src/libs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70807 2018-01-30 12:19:17Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 70808 2018-01-30 12:28:25Z andreas.loeffler@oracle.com $
 ## @file
 # Top-level makefile for the external libraries.
 #
@@ -82,7 +82,9 @@ if defined(VBOX_WITH_MAIN) \
  # VPX for video capture.
  if defined(VBOX_WITH_LIBVPX) && !defined(VBOX_ONLY_DOCS) && !defined(VBOX_WITH_SDK) \
    && ("$(SDK_VBOX_VPX_INCS)" == "$(SDK_VBOX_VPX_DEFAULT_INCS)")
-  if1of ($(KBUILD_TARGET), darwin linux solaris win)
+  if1of ($(KBUILD_TARGET), darwin)
+   include $(PATH_SUB_CURRENT)/libvpx-1.1.0/Makefile.kmk
+  else  
    include $(PATH_SUB_CURRENT)/libvpx-1.6.1/Makefile.kmk
   endif
  endif
