--- a/src/VBox/ValidationKit/tests/api/Makefile.kmk
+++ b/src/VBox/ValidationKit/tests/api/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70817 2018-01-30 18:54:23Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 70818 2018-01-30 20:04:34Z klaus.espenlaub@oracle.com $
 ## @file
 # VirtualBox Validation Kit - API Tests.
 #
@@ -37,6 +37,9 @@ ValidationKitTestsApi_EXEC_SOURCES := \
 	$(PATH_SUB_CURRENT)/tdMoveMedium1.py \
 	$(PATH_SUB_CURRENT)/tdPython1.py \
 	$(PATH_SUB_CURRENT)/tdTreeDepth1.py
+ValidationKitTestsApi_SOURCES := \
+	$(PATH_SUB_CURRENT)/*.ova \
+	$(PATH_SUB_CURRENT)/*.pem
 
 VBOX_VALIDATIONKIT_PYTHON_SOURCES += $(ValidationKitTestsApi_EXEC_SOURCES)
 
