--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70706 2018-01-23 13:24:34Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 70837 2018-01-31 14:59:02Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -505,6 +505,7 @@ VirtualBox_QT_MOCHDRS = \
 	src/wizards/firstrun/UIWizardFirstRunPageBasic.h \
 	src/runtime/information/UIInformationConfiguration.h \
 	src/runtime/information/UIInformationDataItem.h \
+	src/runtime/information/UIInformationGuestSession.h \
 	src/runtime/information/UIInformationItem.h \
 	src/runtime/information/UIInformationModel.h \
 	src/runtime/information/UIInformationRuntime.h \
@@ -832,6 +833,7 @@ VirtualBox_SOURCES = \
 	src/wizards/firstrun/UIWizardFirstRunPageBasic.cpp \
 	src/runtime/information/UIInformationConfiguration.cpp \
 	src/runtime/information/UIInformationDataItem.cpp \
+	src/runtime/information/UIInformationGuestSession.cpp \
 	src/runtime/information/UIInformationItem.cpp \
 	src/runtime/information/UIInformationModel.cpp \
 	src/runtime/information/UIInformationRuntime.cpp \
