Additions/linux: remove support for building with compatibility toolchain. bugref:9112: tools: update i386 Linux Additions build tool Internally the VirtualBox team used a custom tool chain - a rebuild of the build tools from an old 32-bit CentOS and 64-bit Debian release respectively - to easily produce Additions binaries for local testing on old guest systems.  This change removes support for that tool chain in the source code in preparation of adding a lighter weight way of achieving the same result.
svn:sync-xref-src-repo-rev: r120725

--- a/src/VBox/GuestHost/OpenGL/Makefile.kmk
+++ b/src/VBox/GuestHost/OpenGL/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70897 2018-02-08 07:17:15Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VirtualBox Guest/Host OpenGL part
 #
@@ -515,10 +515,8 @@ VBoxOGLcrstate_CLEAN += $(VBOX_PATH_CROGL_GENFILES)/dump_gen.cpp
 endif
 
 ifneq ($(KBUILD_TARGET),win)
- ifeq ($(VBOX_WITH_COMPATIBLE_LINUX_GUEST_PACKAGE),)
 state_tracker/state_lists.c_CFLAGS += $(VBOX_GCC_Wno-pointer-sign)
 VBoxOGLcrstate_CFLAGS +=
- endif
 endif
 ifdef VBOX_WITH_CRHGSMI
 VBoxOGLcrstate_DEFS.win    += VBOX_WITH_CRHGSMI
