--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69560 2017-11-03 11:37:34Z noreply@oracle.com $
+# $Id: Makefile.kmk 70918 2018-02-08 16:11:47Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -185,6 +185,7 @@ VBoxVMM_SOURCES  = \
 	VMMR3/MMHyper.cpp \
 	VMMR3/MMPagePool.cpp \
 	VMMR3/MMUkHeap.cpp \
+	VMMR3/NEMR3.cpp \
 	VMMR3/PDM.cpp \
 	VMMR3/PDMBlkCache.cpp \
 	VMMR3/PDMDevice.cpp \
@@ -305,6 +306,9 @@ VBoxVMM_SOURCES.x86 += \
 	VMMSwitcher/X86Stub.asm
 VBoxVMM_SOURCES.amd64 += \
 	VMMSwitcher/AMD64Stub.asm
+
+VBoxVMM_SOURCES.win += VMMR3/NEMR3Native-win.cpp
+VBoxVMM_DEFS.win    += VBOX_WITH_NATIVE_NEM
 
 VBoxVMM_LIBS = \
 	$(PATH_STAGE_LIB)/DisasmR3$(VBOX_SUFF_LIB)
