--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70899 2018-02-08 09:03:30Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 70923 2018-02-09 09:05:17Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -504,6 +504,7 @@ VirtualBox_QT_MOCHDRS = \
 	src/wizards/firstrun/UIWizardFirstRun.h \
 	src/wizards/firstrun/UIWizardFirstRunPageBasic.h \
 	src/runtime/information/UIGuestSessionsEventHandler.h \
+	src/runtime/information/UIGuestSessionTreeItem.h \
 	src/runtime/information/UIInformationConfiguration.h \
 	src/runtime/information/UIInformationDataItem.h \
 	src/runtime/information/UIInformationGuestSession.h \
@@ -834,6 +835,7 @@ VirtualBox_SOURCES = \
 	src/wizards/firstrun/UIWizardFirstRun.cpp \
 	src/wizards/firstrun/UIWizardFirstRunPageBasic.cpp \
 	src/runtime/information/UIGuestSessionsEventHandler.cpp \
+	src/runtime/information/UIGuestSessionTreeItem.cpp \
 	src/runtime/information/UIInformationConfiguration.cpp \
 	src/runtime/information/UIInformationDataItem.cpp \
 	src/runtime/information/UIInformationGuestSession.cpp \
