--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70924 2018-02-09 09:45:24Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 70935 2018-02-09 14:33:44Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -375,6 +375,8 @@ VirtualBox_QT_MOCHDRS = \
 	src/runtime/information/UIInformationRuntime.h \
 	src/runtime/information/UIInformationView.h \
 	src/runtime/information/UIVMInformationDialog.h \
+	src/runtime/information/guestctrl/UIGuestControlConsole.h \
+	src/runtime/information/guestctrl/UIGuestControlInterface.h \
 	src/runtime/information/guestctrl/UIGuestSessionsEventHandler.h \
 	src/runtime/information/guestctrl/UIGuestSessionTreeItem.h \
 	src/runtime/information/guestctrl/UIInformationGuestSession.h \
@@ -704,6 +706,8 @@ VirtualBox_SOURCES = \
 	src/runtime/information/UIInformationRuntime.cpp \
 	src/runtime/information/UIInformationView.cpp \
 	src/runtime/information/UIVMInformationDialog.cpp \
+	src/runtime/information/guestctrl/UIGuestControlConsole.cpp \
+	src/runtime/information/guestctrl/UIGuestControlInterface.cpp \
 	src/runtime/information/guestctrl/UIInformationGuestSession.cpp \
 	src/runtime/information/guestctrl/UIGuestSessionsEventHandler.cpp \
 	src/runtime/information/guestctrl/UIGuestSessionTreeItem.cpp \
