NEM: Working on PGM notifications. bugref:9044
svn:sync-xref-src-repo-rev: r120797

--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70942 2018-02-09 19:44:03Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70954 2018-02-10 20:10:44Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -242,6 +242,7 @@ VBoxVMM_SOURCES  = \
 	VMMAll/MMAll.cpp \
 	VMMAll/MMAllHyper.cpp \
 	VMMAll/MMAllPagePool.cpp \
+	VMMAll/NEMAll.cpp \
 	VMMAll/PDMAll.cpp \
 	VMMAll/PDMAllCritSect.cpp \
 	VMMAll/PDMAllCritSectRw.cpp \
@@ -785,6 +786,7 @@ ifndef VBOX_ONLY_EXTPACKS
  	VMMAll/MMAll.cpp \
  	VMMAll/MMAllHyper.cpp \
  	VMMAll/MMAllPagePool.cpp \
+	VMMAll/NEMAll.cpp \
  	VMMAll/PDMAll.cpp \
  	VMMAll/PDMAllCritSect.cpp \
  	VMMAll/PDMAllCritSectRw.cpp \
