--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70954 2018-02-10 20:10:44Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70979 2018-02-13 01:38:48Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -172,6 +172,7 @@ VBoxVMM_SOURCES  = \
 	VMMR3/EMR3Dbg.cpp \
 	$(if $(VBOX_WITH_RAW_MODE),VMMR3/EMRaw.cpp) \
 	VMMR3/EMHM.cpp \
+	VMMR3/EMR3Nem.cpp \
 	VMMR3/FTM.cpp \
 	VMMR3/GIM.cpp \
 	VMMR3/GIMHv.cpp \
