ValidationKit/TestExecService: Started implementing a serial port based transport backend which can be used if networking is not available
svn:sync-xref-src-repo-rev: r120847

--- a/src/VBox/ValidationKit/utils/TestExecServ/Makefile.kmk
+++ b/src/VBox/ValidationKit/utils/TestExecServ/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70515 2018-01-10 11:55:05Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71000 2018-02-13 16:45:53Z alexander.eichner@oracle.com $
 ## @file
 # VirtualBox Validation Kit - The Basic Remote Execution Service.
 #
@@ -36,6 +36,11 @@ TestExecService_DEFS = \
 TestExecService_SOURCES = \
 	TestExecService.cpp \
 	TestExecServiceTcp.cpp
+
+ifn1of ($(KBUILD_TARGET), os2)
+ TestExecService_SOURCES += \
+ 	TestExecServiceSerial.cpp
+endif
 
 INSTALLS += TestExecServiceFiles
 TestExecServiceFiles_TEMPLATE                = VBoxValidationKitR3
