--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70935 2018-02-09 14:33:44Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 71005 2018-02-14 10:20:01Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -972,13 +972,6 @@ VirtualBox_SOURCES             += VirtualBox1_x4.qrc
 VirtualBox1_x4.qrc_RCCFLAGS  = -name BASIC1_X4
 VirtualBox_SOURCES             += VirtualBox2_x4.qrc
 VirtualBox2_x4.qrc_RCCFLAGS  = -name BASIC2_X4
-ifeq ($(KBUILD_TARGET),darwin)
- VirtualBox_SOURCES           += VirtualBoxMac.qrc
- VirtualBoxMac.qrc_RCCFLAGS    = -name MAC
-else
- VirtualBox_SOURCES += VirtualBoxOther.qrc
- VirtualBoxOther.qrc_RCCFLAGS  = -name OTHER
-endif
 VirtualBox_SOURCES += $(VBOX_VIRTUALBOX4_OUT_DIR)/VirtualBoxBrand.qrc
 $(VBOX_VIRTUALBOX4_OUT_DIR)/VirtualBoxBrand.qrc_RCCFLAGS = -name BRAND
 if defined(VBOX_WITH_VIDEOHWACCEL) || defined(VBOX_GUI_USE_QGL)
