--- a/src/VBox/Main/UnattendedTemplates/Makefile.kmk
+++ b/src/VBox/Main/UnattendedTemplates/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71007 2018-02-14 12:46:17Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71011 2018-02-14 16:11:18Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for src/VBox/Main/UnattendedTemplates.
 #
@@ -30,6 +30,7 @@ ifdef VBOX_WITH_UNATTENDED
  	ubuntu_preseed.cfg \
  	redhat67_ks.cfg \
  	rhel5_ks.cfg \
+ 	rhel4_ks.cfg \
  	ol_ks.cfg \
  	fedora_ks.cfg \
  	suse_autoinstall.xml \
