VMM/NEM/win: Reimplemented virtual process API, optimizing the cancel case and prepping for doing this from ring-0. bugref:9044
svn:sync-xref-src-repo-rev: r121015

--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71075 2018-02-20 21:10:45Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71129 2018-02-26 15:58:50Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -312,6 +312,7 @@ VBoxVMM_SOURCES.amd64 += \
 if1of ($(USERNAME),bird) # experimental.
  VBoxVMM_SOURCES.win.amd64 += VMMR3/NEMR3Native-win.cpp
  VBoxVMM_DEFS.win.amd64    += VBOX_WITH_NATIVE_NEM
+ VBoxVMM_SDKS.win          += VBOX_NTDLL
  VMMR3/NEMR3Native-win.cpp_DEFS.amd64 = _AMD64_
  VMMR3/NEMR3Native-win.cpp_INCS = \
  	$(KBUILD_DEVTOOLS)/win.x86/sdk/v10.0.17083.0/include/10.0.17083.0/um \
