--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71144 2018-02-27 22:45:00Z noreply@oracle.com $
+# $Id: Makefile.kmk 71183 2018-03-03 00:53:44Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -296,7 +296,7 @@ if defined(VBOX_WITH_SDS) && "$(KBUILD_TARGET)" == "win"
  	src-all/AutoCaller.cpp \
  	src-all/VirtualBoxBase.cpp \
  	src-all/VirtualBoxErrorInfoImpl.cpp \
-    src-all/VirtualBoxClientListImpl.cpp \
+ 	src-all/VirtualBoxClientListImpl.cpp \
  	src-global/VirtualBoxSDSImpl.cpp
  VBoxSDS_SOURCES.win = \
  	src-global/win/VBoxSDS.cpp \
