--- a/src/VBox/Additions/WINNT/Graphics/Video/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Video/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71200 2018-03-05 11:49:28Z vitali.pelenjow@oracle.com $
 ## @file
 # Makefile for the Windows guest video driver.
 #
@@ -221,7 +221,6 @@ ifdef VBOX_WITH_WDDM
 	$(call MSG_TOOL,Inf2Cat,VBoxVideoWddm-inf,$@,$<)
 	$(call VBOX_MAKE_CAT_FN, $(@D),$@)
 
- ifdef VBOX_WITH_WDDM_W8
   VBOXWDDMW8_WITH_DISPD3D = 1
   ifdef VBOX_WITH_CROGL
    VBOXWDDMW8_WITH_GL = 1
@@ -411,7 +410,6 @@ ifdef VBOX_WITH_WDDM
 	$(call MSG_TOOL,Inf2Cat,VBoxVideoW8-inf,$@,$<)
 	$(call VBOX_MAKE_CAT_FN, $(@D),$@)
 
- endif # VBOX_WITH_WDDM_W8
 endif # VBOX_WITH_WDDM
 
 include $(FILE_KBUILD_SUB_FOOTER)
