--- a/src/VBox/Storage/testcase/Makefile.kmk
+++ b/src/VBox/Storage/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71249 2018-03-07 09:21:11Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the storage device & driver testcases.
 #
@@ -113,7 +113,7 @@ if defined(VBOX_WITH_TESTCASES) || defined(VBOX_WITH_VBOX_IMG)
  PROGRAMS += vbox-img
 
  #
- # vbox-img - static because it migth be used as at standalone tool.
+ # vbox-img - static because it migth be used as a standalone tool.
  #
  vbox-img_TEMPLATE = VBoxR3Static
  vbox-img_DEFS += IN_VBOXDDU IN_VBOXDDU_STATIC VBOX_HDD_NO_DYNAMIC_BACKENDS
@@ -170,7 +170,7 @@ if    defined(VBOX_WITH_TESTCASES) && defined(VBOX_WITH_PLUGIN_CRYPT) \
  PROGRAMS += vdkeystoremgr
 
  #
- # vdkeystoremgr - static because it migth be used as at standalone tool.
+ # vdkeystoremgr - static because it migth be used as a standalone tool.
  #
  vdkeystoremgr_TEMPLATE = VBoxR3Static
  vdkeystoremgr_DEFS += IN_VBOXDDU IN_VBOXDDU_STATIC VBOX_HDD_NO_DYNAMIC_BACKENDS
