--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71270 2018-03-08 11:10:45Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 71271 2018-03-08 12:21:53Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -377,6 +377,7 @@ VirtualBox_QT_MOCHDRS = \
 	src/runtime/information/UIVMInformationDialog.h \
 	src/runtime/guestctrl/UIGuestControlConsole.h \
 	src/runtime/guestctrl/UIGuestControlFileManager.h \
+	src/runtime/guestctrl/UIGuestControlFileModel.h \
 	src/runtime/guestctrl/UIGuestControlFileTable.h \
 	src/runtime/guestctrl/UIGuestControlInterface.h \
 	src/runtime/guestctrl/UIGuestControlTreeItem.h \
@@ -711,6 +712,7 @@ VirtualBox_SOURCES = \
 	src/runtime/information/UIVMInformationDialog.cpp \
 	src/runtime/guestctrl/UIGuestControlConsole.cpp \
 	src/runtime/guestctrl/UIGuestControlFileManager.cpp \
+	src/runtime/guestctrl/UIGuestControlFileModel.cpp \
 	src/runtime/guestctrl/UIGuestControlFileTable.cpp \
 	src/runtime/guestctrl/UIGuestControlInterface.cpp \
 	src/runtime/guestctrl/UIGuestControlTreeItem.cpp \
