FE/Qt: bugref:9049: Preparing to common library: Split the QIToolButton code to proper files, doxygen, cleanup.
svn:sync-xref-src-repo-rev: r121297

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71336 2018-03-14 15:08:49Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 71346 2018-03-15 10:03:10Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -672,6 +672,7 @@ VirtualBox_SOURCES = \
 	src/extensions/QIStatusBar.cpp \
 	src/extensions/QIStatusBarIndicator.cpp \
 	src/extensions/QITableView.cpp \
+	src/extensions/QIToolButton.cpp \
 	src/extensions/QITreeView.cpp \
 	src/extensions/QITreeWidget.cpp \
 	src/extensions/QIWidgetValidator.cpp \
