--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71348 2018-03-15 10:21:52Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 71360 2018-03-15 17:14:12Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -352,6 +352,7 @@ VirtualBox_QT_MOCHDRS = \
 	src/globals/UIModalWindowManager.h \
 	src/globals/UIPopupCenter.h \
 	src/globals/UIShortcutPool.h \
+	src/globals/UIStarter.h \
 	src/globals/UIThreadPool.h \
 	src/globals/VBoxGlobal.h \
 	src/globals/VBoxUtils.h \
@@ -694,6 +695,7 @@ VirtualBox_SOURCES = \
 	src/globals/UIModalWindowManager.cpp \
 	src/globals/UIPopupCenter.cpp \
 	src/globals/UIShortcutPool.cpp \
+	src/globals/UIStarter.cpp \
 	src/globals/UIThreadPool.cpp \
 	src/globals/VBoxGlobal.cpp \
 	src/hostnetwork/UIHostNetworkDetailsWidget.cpp \
