--- a/src/VBox/ValidationKit/tests/api/Makefile.kmk
+++ b/src/VBox/ValidationKit/tests/api/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71193 2018-03-05 10:27:41Z valery.portnyagin@oracle.com $
+# $Id: Makefile.kmk 71372 2018-03-19 12:22:44Z klaus.espenlaub@oracle.com $
 ## @file
 # VirtualBox Validation Kit - API Tests.
 #
@@ -41,7 +41,6 @@ ValidationKitTestsApi_EXEC_SOURCES := \
 ValidationKitTestsApi_SOURCES := \
 	$(wildcard \
 		$(PATH_SUB_CURRENT)/*.ova \
-		$(PATH_SUB_CURRENT)/*.pem \
 		)
 
 VBOX_VALIDATIONKIT_PYTHON_SOURCES += $(ValidationKitTestsApi_EXEC_SOURCES)
