--- a/src/VBox/ValidationKit/tests/api/Makefile.kmk
+++ b/src/VBox/ValidationKit/tests/api/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71372 2018-03-19 12:22:44Z klaus.espenlaub@oracle.com $
+# $Id: Makefile.kmk 71387 2018-03-20 10:15:27Z valery.portnyagin@oracle.com $
 ## @file
 # VirtualBox Validation Kit - API Tests.
 #
@@ -37,10 +37,12 @@ ValidationKitTestsApi_EXEC_SOURCES := \
 	$(PATH_SUB_CURRENT)/tdMoveMedium1.py \
 	$(PATH_SUB_CURRENT)/tdPython1.py \
 	$(PATH_SUB_CURRENT)/tdTreeDepth1.py \
-	$(PATH_SUB_CURRENT)/tdMoveVM.py
+	$(PATH_SUB_CURRENT)/tdMoveVM1.py
 ValidationKitTestsApi_SOURCES := \
 	$(wildcard \
 		$(PATH_SUB_CURRENT)/*.ova \
+        $(PATH_SUB_CURRENT)/*.img \
+        $(PATH_SUB_CURRENT)/*.iso
 		)
 
 VBOX_VALIDATIONKIT_PYTHON_SOURCES += $(ValidationKitTestsApi_EXEC_SOURCES)
