--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71360 2018-03-15 17:14:12Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 71388 2018-03-20 10:16:28Z serkan.bayraktar@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -405,6 +405,8 @@ VirtualBox_QT_MOCHDRS = \
 	src/runtime/guestctrl/UIGuestControlInterface.h \
 	src/runtime/guestctrl/UIGuestControlTreeItem.h \
 	src/runtime/guestctrl/UIGuestControlWidget.h \
+	src/runtime/guestctrl/UIGuestFileTable.h \
+	src/runtime/guestctrl/UIHostFileTable.h \
 	src/runtime/normal/UIKeyboardHandlerNormal.h \
 	src/runtime/normal/UIMachineLogicNormal.h \
 	src/runtime/normal/UIMachineViewNormal.h \
@@ -751,6 +753,8 @@ VirtualBox_SOURCES = \
 	src/runtime/guestctrl/UIGuestControlInterface.cpp \
 	src/runtime/guestctrl/UIGuestControlTreeItem.cpp \
 	src/runtime/guestctrl/UIGuestControlWidget.cpp \
+	src/runtime/guestctrl/UIGuestFileTable.cpp \
+	src/runtime/guestctrl/UIHostFileTable.cpp \
 	src/runtime/normal/UIKeyboardHandlerNormal.cpp \
 	src/runtime/normal/UIMachineLogicNormal.cpp \
 	src/runtime/normal/UIMachineViewNormal.cpp \
