FE/Qt: bugref:9049: Full and heavy cleanup for QIFileDialog.
svn:sync-xref-src-repo-rev: r121357

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71388 2018-03-20 10:16:28Z serkan.bayraktar@oracle.com $
+# $Id: Makefile.kmk 71392 2018-03-20 11:04:03Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -625,8 +625,6 @@ endif
 
 VirtualBox_QT_MOCSRCS.darwin += \
 	src/platform/darwin/UIWindowMenuManager.cpp
-VirtualBox_QT_MOCSRCS.win += \
-	src/extensions/QIFileDialog.cpp
 VirtualBox_QT_MOCSRCS.linux += \
 	src/globals/UIDesktopWidgetWatchdog.cpp
 VirtualBox_QT_MOCSRCS.solaris += \
