/Makefile.kmk: No need to do validationkit-build-win.x86 before validationkit-build-win.amd64, let them run in parallel.
svn:sync-xref-src-repo-rev: r121453

--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71475 2018-03-23 02:08:55Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71481 2018-03-23 11:10:06Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -1467,8 +1467,7 @@ else
 VBOX_VALIDATIONKIT_BUILD_WIN_HOST_FIRST =
 endif
 
-# ASSUMES the 32-bit edition has been built already. Also for serializing VM access.
-validationkit-build-win.amd64: validationkit-build-win.x86
+validationkit-build-win.amd64:
 ifeq ($(KBUILD_TARGET),win)
 	+ $(VBOX_KMK_TIME) $(KMK) $(VBOX_VALIDATIONKIT_BUILD.amd64) all $(VBOX_VALIDATIONKIT_HOST_BUILD_TWEAK)
 else
