Runtime: Introduce RTTraceLog* API for creating and parsing binary trace log files. The format and API is designed with the          following goals in mind:
             1. Allow streaming the data via network or write it to a file.
             2. Embed the structure of the traced data into the log allowing arbitrary structured data to be embedded
                without requiring adaptions on the parsing side.
             3. Allow grouping of traced data belonging together to easily follow chains of events later on.
             4. Trace events can have a parent assigned to check where an event originally originated from.
             5. Low overhead on the creation side.

         The current state implements the absolute basics on the creation and parsing side and is work in progress. This will
         be used later on in the device emulation fuzzer to capture device and examine device states and changes.



svn:sync-xref-src-repo-rev: r121464

--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69643 2017-11-10 13:34:06Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71492 2018-03-24 22:23:10Z alexander.eichner@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -134,6 +134,7 @@ PROGRAMS += \
 	tstRTThreadPoke \
 	tstRTThreadExecutionTime \
 	tstRTTime \
+	tstRTTraceLog \
 	tstTime-2 \
 	tstTime-3 \
 	tstTime-4 \
@@ -659,6 +660,9 @@ tstRTThreadExecutionTime_SOURCES = tstRTThreadExecutionTime.cpp
 
 tstRTTime_TEMPLATE = VBOXR3TSTEXE
 tstRTTime_SOURCES = tstRTTime.cpp
+
+tstRTTraceLog_TEMPLATE = VBOXR3TSTEXE
+tstRTTraceLog_SOURCES = tstRTTraceLog.cpp
 
 tstTime-2_TEMPLATE = VBOXR3TSTEXE
 tstTime-2_SOURCES = tstTime-2.cpp
