FE/Qt: bugref:9049: Yet another tiny cleanup for GUI Makefile (s.a. r121692).
svn:sync-xref-src-repo-rev: r121694

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71663 2018-04-04 15:30:39Z sergey.dubov@oracle.com $
+# $Id: Makefile.kmk 71664 2018-04-04 15:36:50Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -668,6 +668,7 @@ ifdef VBOX_WITH_DRAG_AND_DROP
 endif
 
 VirtualBox_QT_MOCHDRS.darwin += \
+	src/platform/darwin/UICocoaSpecialControls.h \
 	src/platform/darwin/UIWindowMenuManager.h
 
 
@@ -1074,8 +1075,6 @@ VirtualBox_SOURCES.darwin += \
 	src/platform/darwin/UIDesktopServices_darwin_cocoa.mm \
 	src/platform/darwin/VBoxUtils-darwin-cocoa.mm \
 	src/platform/darwin/VBoxUtils-darwin.cpp
-VirtualBox_QT_MOCHDRS.darwin += \
-	src/platform/darwin/UICocoaSpecialControls.h
 
 ifdef VBOX_WITH_ICHAT_THEATER
  VirtualBox_SOURCES.darwin += \
