DevIchAc97: Do simple stuff (most stuff actually) in ring-0 / rawmode context.
svn:sync-xref-src-repo-rev: r121853

--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71721 2018-04-06 20:51:26Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71751 2018-04-08 23:05:36Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -933,7 +933,8 @@ if !defined(VBOX_ONLY_EXTPACKS)         # Goes on almost to the end of the file.
   VBoxDDRC_DEFS         += $(VBOX_AUDIO_DEFS)
   VBoxDDRC_SOURCES      += \
  	Audio/DevHDA.cpp \
- 	Audio/DevHDACommon.cpp
+ 	Audio/DevHDACommon.cpp \
+	Audio/DevIchAc97.cpp
 
   VBoxDDRC_DEFS         += \
 	$(if $(VBOX_WITH_HP_HDA),VBOX_WITH_HP_HDA,) \
@@ -1117,7 +1118,8 @@ if !defined(VBOX_ONLY_EXTPACKS)         # Goes on almost to the end of the file.
  VBoxDDR0_DEFS += $(VBOX_AUDIO_DEFS)
  VBoxDDR0_SOURCES += \
  	Audio/DevHDA.cpp \
- 	Audio/DevHDACommon.cpp
+ 	Audio/DevHDACommon.cpp \
+	Audio/DevIchAc97.cpp
 
  ifdef VBOX_WITH_E1000
   VBoxDDR0_DEFS         += VBOX_WITH_E1000
