WDDM: VBoxDispD3D: OpenAdapter cleanup, moved DllMain to the end of file, removed unused code.
svn:sync-xref-src-repo-rev: r122183

--- a/src/VBox/Additions/WINNT/Graphics/Video/disp/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Video/disp/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70802 2018-01-30 04:53:42Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71934 2018-04-20 11:45:18Z vitali.pelenjow@oracle.com $
 ## @file
 # Makefile for the Windows guest display driver.
 #
@@ -90,7 +90,7 @@ ifdef VBOX_WITH_WDDM
 DLLS += VBoxDispD3D
 VBoxDispD3D_TEMPLATE = VBoxGuestR3DllMinVista
 VBoxDispD3D_SDKS     = ReorderCompilerIncs $(VBOX_WINDDK_GST_WLH)
-VBoxDispD3D_DEFS     = UNICODE _UNICODE VBOX_WITH_WDDM VBOXWDDMDISP LOG_TO_BACKDOOR LOG_TO_BACKDOOR_DRV VBOX_WITH_HGCM D3D_UMD_INTERFACE_VERSION=0x000C
+VBoxDispD3D_DEFS     = UNICODE _UNICODE VBOX_WITH_WDDM VBOXWDDMDISP LOG_TO_BACKDOOR LOG_TO_BACKDOOR_DRV VBOX_WITH_HGCM
 ifdef DEBUG_misha
 VBoxDispD3D_DEFS    += LOG_ENABLED
 endif
