Installer/win,HostDrivers/*/win: Ship two different .cat files, one for W10 w/ MS blessing and a pre-W10 that we created+signed during build.
svn:sync-xref-src-repo-rev: r122264

--- a/src/VBox/HostDrivers/Support/Makefile.kmk
+++ b/src/VBox/HostDrivers/Support/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70315 2017-12-22 12:23:30Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 72004 2018-04-24 14:40:13Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the support library and the drivers/modules/kexts it uses.
 #
@@ -768,7 +768,8 @@ ifeq ($(KBUILD_TARGET), win)
  ifdef VBOX_SIGNING_MODE
   VBoxDrv-inf_SOURCES += \
   	$(PATH_TARGET)/VBoxDrvCat.dir/VBoxDrv.sys \
-  	$(PATH_TARGET)/VBoxDrvCat.dir/VBoxDrv.cat
+  	$(PATH_TARGET)/VBoxDrvCat.dir/VBoxDrv.cat \
+  	$(PATH_TARGET)/VBoxDrvCat.dir/VBoxDrv.cat=>VBoxDrv-PreW10.cat
 
   $(PATH_TARGET)/VBoxDrvCat.dir/VBoxDrv.sys: $$(VBoxDrv_1_TARGET) | $$(dir $$@)
 	$(INSTALL) -m 644 $< $(@D)
